// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Cards/SchoolCard with many locations 1`] = `
<article
  className="Card SchoolCard"
  data-testid="SchoolCard"
>
  <span
    className="ScreenReaderOnly"
    data-testid="SCREEN_READER_ONLY"
  >
    <h6
      data-testid="SchoolCard Name: General Assembly"
    >
      General Assembly
    </h6>
  </span>
  <div
    className="ribbon gi"
    data-testid="GI Bill Ribbon"
  >
    GI Bill
  </div>
  <div
    className="ribbon vettec"
    data-testid="Vet Tec Ribbon"
  >
    Vet Tec
  </div>
  <div
    className="ribbon dual"
    data-testid="Dual Ribbon"
  >
    GI Bill
  </div>
  <div
    className="cardBrand"
  >
    <noscript>
      <img
        alt="General Assembly logo"
        height="150"
        src="https://operation-code-assets.s3.us-east-2.amazonaws.com/codeSchoolLogos/general_assembly.jpg"
      />
    </noscript>
    <img
      alt="General Assembly logo"
      data-src="https://operation-code-assets.s3.us-east-2.amazonaws.com/codeSchoolLogos/general_assembly.jpg"
      height="150"
    />
  </div>
  <div
    className="cardBlock badgeGroup"
  >
    <figure
      className="Badge badgeGroupItem active"
    >
      <svg />
      <figcaption
        className="label"
      >
        <span
          className="ScreenReaderOnly"
          data-testid="SCREEN_READER_ONLY"
        >
          Has 
        </span>
        Physical campus
      </figcaption>
    </figure>
    <figure
      className="Badge badgeGroupItem active"
    >
      <svg
        data-testid="School has online"
      />
      <figcaption
        className="label"
      >
        <span
          className="ScreenReaderOnly"
          data-testid="SCREEN_READER_ONLY"
        >
          Has 
        </span>
        Online classes
      </figcaption>
    </figure>
    <figure
      className="Badge badgeGroupItem inactive"
    >
      <svg />
      <figcaption
        className="label"
      >
        <span
          className="ScreenReaderOnly"
          data-testid="SCREEN_READER_ONLY"
        >
          Does not have 
        </span>
        Housing options
      </figcaption>
    </figure>
    <figure
      className="Badge badgeGroupItem inactive"
    >
      <svg />
      <figcaption
        className="label"
      >
        <span
          className="ScreenReaderOnly"
          data-testid="SCREEN_READER_ONLY"
        >
          Does not have 
        </span>
        Provided equipment
      </figcaption>
    </figure>
  </div>
  <div
    className="cardBlock"
  >
    <span
      className="cardBlockTitle"
    >
      Campus Locations:
    </span>
    Multiple locations
    <button
      className="Button modalToggler primary"
      data-testid="BUTTON"
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      type="button"
    >
      view all
    </button>
  </div>
  <div
    className="cardBlock"
  >
    <a
      className="Button secondary fullWidth"
      href="https://generalassembly.com"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      Visit Website
      <span
        className="ScreenReaderOnly"
        data-testid="SCREEN_READER_ONLY"
      >
        Opens in new window
      </span>
    </a>
  </div>
</article>
`;

exports[`Storyshots Cards/SchoolCard with no physical locations 1`] = `
<article
  className="Card SchoolCard"
  data-testid="SchoolCard"
>
  <span
    className="ScreenReaderOnly"
    data-testid="SCREEN_READER_ONLY"
  >
    <h6
      data-testid="SchoolCard Name: Thinkful"
    >
      Thinkful
    </h6>
  </span>
  <div
    className="ribbon vettec"
    data-testid="Vet Tec Ribbon"
  >
    Vet Tec
  </div>
  <div
    className="cardBrand"
  >
    <noscript>
      <img
        alt="Thinkful logo"
        height="150"
        src="https://operation-code-assets.s3.us-east-2.amazonaws.com/codeSchoolLogos/thinkful.jpg"
      />
    </noscript>
    <img
      alt="Thinkful logo"
      data-src="https://operation-code-assets.s3.us-east-2.amazonaws.com/codeSchoolLogos/thinkful.jpg"
      height="150"
    />
  </div>
  <div
    className="cardBlock badgeGroup"
  >
    <figure
      className="Badge badgeGroupItem inactive"
    >
      <svg />
      <figcaption
        className="label"
      >
        <span
          className="ScreenReaderOnly"
          data-testid="SCREEN_READER_ONLY"
        >
          Does not have 
        </span>
        Physical campus
      </figcaption>
    </figure>
    <figure
      className="Badge badgeGroupItem active"
    >
      <svg
        data-testid="School has online"
      />
      <figcaption
        className="label"
      >
        <span
          className="ScreenReaderOnly"
          data-testid="SCREEN_READER_ONLY"
        >
          Has 
        </span>
        Online classes
      </figcaption>
    </figure>
    <figure
      className="Badge badgeGroupItem inactive"
    >
      <svg />
      <figcaption
        className="label"
      >
        <span
          className="ScreenReaderOnly"
          data-testid="SCREEN_READER_ONLY"
        >
          Does not have 
        </span>
        Housing options
      </figcaption>
    </figure>
    <figure
      className="Badge badgeGroupItem inactive"
    >
      <svg />
      <figcaption
        className="label"
      >
        <span
          className="ScreenReaderOnly"
          data-testid="SCREEN_READER_ONLY"
        >
          Does not have 
        </span>
        Provided equipment
      </figcaption>
    </figure>
  </div>
  <div
    className="cardBlock"
  >
    <span
      className="cardBlockTitle"
    >
      Campus Locations:
    </span>
    Online only
  </div>
  <div
    className="cardBlock"
  >
    <a
      className="Button secondary fullWidth"
      href="https://thinkful.com"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      Visit Website
      <span
        className="ScreenReaderOnly"
        data-testid="SCREEN_READER_ONLY"
      >
        Opens in new window
      </span>
    </a>
  </div>
</article>
`;

exports[`Storyshots Cards/SchoolCard with one location 1`] = `
<article
  className="Card SchoolCard"
  data-testid="SchoolCard"
>
  <span
    className="ScreenReaderOnly"
    data-testid="SCREEN_READER_ONLY"
  >
    <h6
      data-testid="SchoolCard Name: Code Immersives"
    >
      Code Immersives
    </h6>
  </span>
  <div
    className="ribbon vettec"
    data-testid="Vet Tec Ribbon"
  >
    Vet Tec
  </div>
  <div
    className="cardBrand"
  >
    <noscript>
      <img
        alt="Code Immersives logo"
        height="150"
        src="https://operation-code-assets.s3.us-east-2.amazonaws.com/codeSchoolLogos/code_immersives.jpg"
      />
    </noscript>
    <img
      alt="Code Immersives logo"
      data-src="https://operation-code-assets.s3.us-east-2.amazonaws.com/codeSchoolLogos/code_immersives.jpg"
      height="150"
    />
  </div>
  <div
    className="cardBlock badgeGroup"
  >
    <figure
      className="Badge badgeGroupItem active"
    >
      <svg />
      <figcaption
        className="label"
      >
        <span
          className="ScreenReaderOnly"
          data-testid="SCREEN_READER_ONLY"
        >
          Has 
        </span>
        Physical campus
      </figcaption>
    </figure>
    <figure
      className="Badge badgeGroupItem inactive"
    >
      <svg
        data-testid="School has no online"
      />
      <figcaption
        className="label"
      >
        <span
          className="ScreenReaderOnly"
          data-testid="SCREEN_READER_ONLY"
        >
          Does not have 
        </span>
        Online classes
      </figcaption>
    </figure>
    <figure
      className="Badge badgeGroupItem inactive"
    >
      <svg />
      <figcaption
        className="label"
      >
        <span
          className="ScreenReaderOnly"
          data-testid="SCREEN_READER_ONLY"
        >
          Does not have 
        </span>
        Housing options
      </figcaption>
    </figure>
    <figure
      className="Badge badgeGroupItem active"
    >
      <svg />
      <figcaption
        className="label"
      >
        <span
          className="ScreenReaderOnly"
          data-testid="SCREEN_READER_ONLY"
        >
          Has 
        </span>
        Provided equipment
      </figcaption>
    </figure>
  </div>
  <div
    className="cardBlock"
  >
    <span
      className="cardBlockTitle"
    >
      Campus Locations:
    </span>
    Los Angeles, CA
  </div>
  <div
    className="cardBlock"
  >
    <a
      className="Button secondary fullWidth"
      href="https://codeimmersives.com"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      Visit Website
      <span
        className="ScreenReaderOnly"
        data-testid="SCREEN_READER_ONLY"
      >
        Opens in new window
      </span>
    </a>
  </div>
</article>
`;
